##############################################################################
# Cmake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(groot-wallpapers)

##############################################################################
# Installs
##############################################################################

install(DIRECTORY
            Groot
        DESTINATION
            ${CMAKE_INSTALL_PREFIX}/share/wallpapers
        )
